# simple-perceptron

./: Cargo.toml  training_data.json
results/: iteration.csv  weights.csv
src/: main.rs
