[package]
name = "simple-perceptron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_arrays = "0.1"
csv = "1.3"
plotters = "0.3"
